src/test/ui/issues/20000-29999/issue-20162.rs
struct X { x: i32 }

fn main() {
    let mut b: Vec<X> = vec![];
    b.sort();
    //~^ ERROR `X: Ord` is not satisfied
}
